<resources>
    <string name="app_name">CalculadoraNoite</string>
    <string name="DigitePrimeiroNumero">Digite o primeiro número</string>
    <string name="DigiteSegundoNumero">Digite o segundo número</string>
    <string name="Somar">Somar</string>
    <string name="Subtrair">Subtrair</string>
    <string name="Multiplicar">Multiplicar</string>
    <string name="Dividir">Dividir</string>
    <string name="Resultado">Resultado</string>
    <string name="msg_divisao_zero">Divisão por zero</string>
    <string name="msg_erro_calculo">Erro de cálculo</string>
</resources>